Making some changes to the webpage

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>Neil's React App</title>
   </head>
   <body>
+    <p>Neil is teh greatest hacker for doing this.</p>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
      <h3>Hostname</h3>
