EDIT: formatting and txt changes to website

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Neil's React App</title>
   </head>
   <body>
-    <p>Neil is teh greatest hacker for doing this.</p>
+    <p>Tell Daffy I'll be home soon, pork scratchings on the cards if she's good</p>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
      <h3>Hostname</h3>
